--- a/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
+++ b/Fall-2022-Club-Project/Example/Pipelines/Data Science Club ETL Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [16:04<00:00, 10.36it/s]\n"
+      "100%|██████████| 10000/10000 [14:07<00:00, 11.80it/s] \n"
      ]
     },
     {
@@ -125,107 +125,107 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.500</td>\n",
-       "      <td>0.936</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-7.666</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.4250</td>\n",
-       "      <td>0.0145</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.4920</td>\n",
-       "      <td>0.816</td>\n",
-       "      <td>161.019</td>\n",
+       "      <td>0.706</td>\n",
+       "      <td>0.607</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-6.797</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0255</td>\n",
+       "      <td>0.07810</td>\n",
+       "      <td>0.001100</td>\n",
+       "      <td>0.2690</td>\n",
+       "      <td>0.795</td>\n",
+       "      <td>105.986</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>2EdXuGy7d76Whv0BuJoe6r</td>\n",
-       "      <td>spotify:track:2EdXuGy7d76Whv0BuJoe6r</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/2EdXuGy7d76W...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/2EdX...</td>\n",
-       "      <td>288624</td>\n",
+       "      <td>2MtMNJhyfiEvP96Wo5TZMr</td>\n",
+       "      <td>spotify:track:2MtMNJhyfiEvP96Wo5TZMr</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2MtMNJhyfiEv...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2MtM...</td>\n",
+       "      <td>329307</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.407</td>\n",
-       "      <td>0.765</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-6.175</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0344</td>\n",
-       "      <td>0.0169</td>\n",
-       "      <td>0.004360</td>\n",
-       "      <td>0.5460</td>\n",
-       "      <td>0.121</td>\n",
-       "      <td>153.040</td>\n",
-       "      <td>audio_features</td>\n",
-       "      <td>2EDXuUJ28BR45U6Cl6Tisj</td>\n",
-       "      <td>spotify:track:2EDXuUJ28BR45U6Cl6Tisj</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/2EDXuUJ28BR4...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/2EDX...</td>\n",
-       "      <td>351240</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.595</td>\n",
-       "      <td>0.306</td>\n",
+       "      <td>0.622</td>\n",
+       "      <td>0.984</td>\n",
        "      <td>10</td>\n",
-       "      <td>-11.048</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0349</td>\n",
-       "      <td>0.9290</td>\n",
-       "      <td>0.000098</td>\n",
-       "      <td>0.1230</td>\n",
-       "      <td>0.556</td>\n",
-       "      <td>93.872</td>\n",
+       "      <td>-1.531</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0779</td>\n",
+       "      <td>0.00162</td>\n",
+       "      <td>0.021300</td>\n",
+       "      <td>0.6960</td>\n",
+       "      <td>0.666</td>\n",
+       "      <td>108.007</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>2EDxZbqgbUY5DW445yFt1V</td>\n",
-       "      <td>spotify:track:2EDxZbqgbUY5DW445yFt1V</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/2EDxZbqgbUY5...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/2EDx...</td>\n",
-       "      <td>193348</td>\n",
+       "      <td>2mTmPKk4QvLsQHHzluLoYZ</td>\n",
+       "      <td>spotify:track:2mTmPKk4QvLsQHHzluLoYZ</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2mTmPKk4QvLs...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2mTm...</td>\n",
+       "      <td>220900</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.735</td>\n",
-       "      <td>0.611</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-7.561</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0946</td>\n",
-       "      <td>0.0440</td>\n",
-       "      <td>0.003930</td>\n",
-       "      <td>0.0295</td>\n",
-       "      <td>0.568</td>\n",
-       "      <td>148.143</td>\n",
+       "      <td>0.726</td>\n",
+       "      <td>0.607</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-9.177</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0506</td>\n",
+       "      <td>0.12300</td>\n",
+       "      <td>0.000892</td>\n",
+       "      <td>0.1080</td>\n",
+       "      <td>0.225</td>\n",
+       "      <td>127.991</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>2EDy9UxnD8Rz8KzeW4KzR5</td>\n",
-       "      <td>spotify:track:2EDy9UxnD8Rz8KzeW4KzR5</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/2EDy9UxnD8Rz...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/2EDy...</td>\n",
-       "      <td>159133</td>\n",
+       "      <td>2mtmVxxieIIJdMqDvy5aq3</td>\n",
+       "      <td>spotify:track:2mtmVxxieIIJdMqDvy5aq3</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2mtmVxxieIIJ...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2mtm...</td>\n",
+       "      <td>204375</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.529</td>\n",
-       "      <td>0.136</td>\n",
+       "      <td>0.497</td>\n",
+       "      <td>0.777</td>\n",
        "      <td>7</td>\n",
-       "      <td>-16.693</td>\n",
+       "      <td>-6.469</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0637</td>\n",
-       "      <td>0.9760</td>\n",
-       "      <td>0.670000</td>\n",
-       "      <td>0.1370</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>120.844</td>\n",
+       "      <td>0.2200</td>\n",
+       "      <td>0.20400</td>\n",
+       "      <td>0.003810</td>\n",
+       "      <td>0.0928</td>\n",
+       "      <td>0.594</td>\n",
+       "      <td>77.048</td>\n",
        "      <td>audio_features</td>\n",
-       "      <td>2EdyBXaB5myLGsBFtiEtA8</td>\n",
-       "      <td>spotify:track:2EdyBXaB5myLGsBFtiEtA8</td>\n",
-       "      <td>https://api.spotify.com/v1/tracks/2EdyBXaB5myL...</td>\n",
-       "      <td>https://api.spotify.com/v1/audio-analysis/2Edy...</td>\n",
-       "      <td>272013</td>\n",
+       "      <td>2mTMyXn3knPor0BK68okuE</td>\n",
+       "      <td>spotify:track:2mTMyXn3knPor0BK68okuE</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2mTMyXn3knPo...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2mTM...</td>\n",
+       "      <td>172493</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.432</td>\n",
+       "      <td>0.490</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.924</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0457</td>\n",
+       "      <td>0.44600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.3400</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>159.225</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>2mtmzpVrpTRuS3yuL8iFz4</td>\n",
+       "      <td>spotify:track:2mtmzpVrpTRuS3yuL8iFz4</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/2mtmzpVrpTRu...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/2mtm...</td>\n",
+       "      <td>186000</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -234,49 +234,49 @@
       ],
       "text/plain": [
        "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
-       "0         0.500   0.936    1    -7.666     1       0.4250        0.0145   \n",
-       "0         0.407   0.765    4    -6.175     1       0.0344        0.0169   \n",
-       "0         0.595   0.306   10   -11.048     1       0.0349        0.9290   \n",
-       "0         0.735   0.611    7    -7.561     1       0.0946        0.0440   \n",
-       "0         0.529   0.136    7   -16.693     1       0.0637        0.9760   \n",
+       "0         0.706   0.607    9    -6.797     0       0.0255       0.07810   \n",
+       "0         0.622   0.984   10    -1.531     0       0.0779       0.00162   \n",
+       "0         0.726   0.607   11    -9.177     0       0.0506       0.12300   \n",
+       "0         0.497   0.777    7    -6.469     1       0.2200       0.20400   \n",
+       "0         0.432   0.490    0    -5.924     1       0.0457       0.44600   \n",
        "\n",
        "   instrumentalness  liveness  valence    tempo            type  \\\n",
-       "0          0.000000    0.4920    0.816  161.019  audio_features   \n",
-       "0          0.004360    0.5460    0.121  153.040  audio_features   \n",
-       "0          0.000098    0.1230    0.556   93.872  audio_features   \n",
-       "0          0.003930    0.0295    0.568  148.143  audio_features   \n",
-       "0          0.670000    0.1370    0.345  120.844  audio_features   \n",
+       "0          0.001100    0.2690    0.795  105.986  audio_features   \n",
+       "0          0.021300    0.6960    0.666  108.007  audio_features   \n",
+       "0          0.000892    0.1080    0.225  127.991  audio_features   \n",
+       "0          0.003810    0.0928    0.594   77.048  audio_features   \n",
+       "0          0.000000    0.3400    0.538  159.225  audio_features   \n",
        "\n",
        "                       id                                   uri  \\\n",
-       "0  2EdXuGy7d76Whv0BuJoe6r  spotify:track:2EdXuGy7d76Whv0BuJoe6r   \n",
-       "0  2EDXuUJ28BR45U6Cl6Tisj  spotify:track:2EDXuUJ28BR45U6Cl6Tisj   \n",
-       "0  2EDxZbqgbUY5DW445yFt1V  spotify:track:2EDxZbqgbUY5DW445yFt1V   \n",
-       "0  2EDy9UxnD8Rz8KzeW4KzR5  spotify:track:2EDy9UxnD8Rz8KzeW4KzR5   \n",
-       "0  2EdyBXaB5myLGsBFtiEtA8  spotify:track:2EdyBXaB5myLGsBFtiEtA8   \n",
+       "0  2MtMNJhyfiEvP96Wo5TZMr  spotify:track:2MtMNJhyfiEvP96Wo5TZMr   \n",
+       "0  2mTmPKk4QvLsQHHzluLoYZ  spotify:track:2mTmPKk4QvLsQHHzluLoYZ   \n",
+       "0  2mtmVxxieIIJdMqDvy5aq3  spotify:track:2mtmVxxieIIJdMqDvy5aq3   \n",
+       "0  2mTMyXn3knPor0BK68okuE  spotify:track:2mTMyXn3knPor0BK68okuE   \n",
+       "0  2mtmzpVrpTRuS3yuL8iFz4  spotify:track:2mtmzpVrpTRuS3yuL8iFz4   \n",
        "\n",
        "                                          track_href  \\\n",
-       "0  https://api.spotify.com/v1/tracks/2EdXuGy7d76W...   \n",
-       "0  https://api.spotify.com/v1/tracks/2EDXuUJ28BR4...   \n",
-       "0  https://api.spotify.com/v1/tracks/2EDxZbqgbUY5...   \n",
-       "0  https://api.spotify.com/v1/tracks/2EDy9UxnD8Rz...   \n",
-       "0  https://api.spotify.com/v1/tracks/2EdyBXaB5myL...   \n",
+       "0  https://api.spotify.com/v1/tracks/2MtMNJhyfiEv...   \n",
+       "0  https://api.spotify.com/v1/tracks/2mTmPKk4QvLs...   \n",
+       "0  https://api.spotify.com/v1/tracks/2mtmVxxieIIJ...   \n",
+       "0  https://api.spotify.com/v1/tracks/2mTMyXn3knPo...   \n",
+       "0  https://api.spotify.com/v1/tracks/2mtmzpVrpTRu...   \n",
        "\n",
        "                                        analysis_url  duration_ms  \\\n",
-       "0  https://api.spotify.com/v1/audio-analysis/2EdX...       288624   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/2EDX...       351240   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/2EDx...       193348   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/2EDy...       159133   \n",
-       "0  https://api.spotify.com/v1/audio-analysis/2Edy...       272013   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2MtM...       329307   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2mTm...       220900   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2mtm...       204375   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2mTM...       172493   \n",
+       "0  https://api.spotify.com/v1/audio-analysis/2mtm...       186000   \n",
        "\n",
        "   time_signature  \n",
        "0               4  \n",
        "0               4  \n",
        "0               4  \n",
-       "0               4  \n",
+       "0               5  \n",
        "0               4  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,15 +284,15 @@
    "source": [
     "# Extract tracks from API\n",
     "output_df = pd.DataFrame()\n",
-    "for row in tqdm(results[670001:680001]):\n",
-    "      output = sp.audio_features(row)\n",
-    "      output_df = output_df.append(output)\n",
+    "for row in tqdm(results[750001:760001]):\n",
+    "      output = pd.DataFrame(sp.audio_features(row))\n",
+    "      output_df = pd.concat([output_df, output])\n",
     "output_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
      "output_type": "stream",
      "text": [
       "10000 rows imported to database.\n",
-      "App contains (670001,) songs.\n"
+      "App contains (750001,) songs.\n"
      ]
     }
    ],
